alignment fixes

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1385,7 +1385,7 @@ h6 {font-size: 12px; line-height: 18px;}
 .footer-con .middle_portion .links,
 .footer-con .middle_portion .timing {margin-bottom: 18px;}
 .footer-con .middle_portion .links li {padding-left: 12px; margin-bottom: 3px;}
-.footer-con .middle_portion .icon .text {display: block; margin-bottom: 6px;}
+.footer-con .middle_portion .icon .text {display: block; margin-bottom: 20px;}
 .footer-con .copyright p {padding: 10px 0 12px;}
 .footer-con .footer-contactimage {right: 10px; bottom: 100px;}
 #fixed-form-container {width: 210px;}
